<resources>
    <string name="app_name">SACRAMENTO APP</string>
    <string name="sacramento_app">SACRAMENTO APP</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_names">Full Names</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="todo">TODO</string>
    <string name="log_in_button">LOGIN</string>
    <string name="textview">TextView</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="crate_an_account_or_login">Crate an Account or Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LogIn</string>
    <string name="john_wick_chapter_4">JOHN WICK Chapter 4</string>
    <string name="buy_movie">Buy Movie</string>
    <string name="button">Button</string>
    <string name="rent_movie">Rent MOVIE</string>
    <string name="top_4_in_south_africa_today">Top #4 in south Africa Today</string>
</resources>