<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Authentication">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:fontFamily="@font/nosifer"
            android:gravity="center|center_horizontal"
            android:text="@string/sacramento_app"
            android:textColor="#8AD9E3"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.068" />

        <EditText
            android:id="@+id/authenEmail"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/input_dimens"
            android:textColor="@color/white"
            android:textColorHint="#E3E1D9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.469" />

        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/input_dimens"
            android:textColor="@color/white"
            android:textColorHint="#E3E1D9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/authenEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authenEmail"
            app:layout_constraintTop_toBottomOf="@+id/authenEmail"
            app:layout_constraintVertical_bias="0.071" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="#03A9F4"
            android:text="@string/log_in_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInPassword"
            app:layout_constraintVertical_bias="0.165" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="138dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/logo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>