<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            tools:context=".Registration">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:fontFamily="@font/nosifer"
                android:gravity="center|center_horizontal"
                android:text="@string/sacramento_app"
                android:textColor="#8AD9E3"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/create_new_account"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@color/black"
                android:ems="10"
                android:hint="@string/full_names"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/input_dimens"
                android:textColor="#FFFFFF"
                android:textColorHint="#E3E1D9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.221" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@color/black"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/input_dimens"
                android:textColor="#FFFFFF"
                android:textColorHint="#E3E1D9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fullName"
                app:layout_constraintStart_toStartOf="@+id/fullName"
                app:layout_constraintTop_toBottomOf="@+id/fullName"
                app:layout_constraintVertical_bias="0.050000012" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@color/black"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/input_dimens"
                android:textColor="@color/white"
                android:textColorHint="#E3E1D9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@color/black"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/input_dimens"
                android:textColor="@color/white"
                android:textColorHint="#E3E1D9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@color/black"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/input_dimens"
                android:textColor="@color/white"
                android:textColorHint="#E3E1D9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerPassword"
                app:layout_constraintVertical_bias="0.094" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="#03A9F4"
                android:text="@string/register"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_bias="0.336" />

            <Button
                android:id="@+id/logWindowButton"
                android:layout_width="308dp"
                android:layout_height="24dp"
                android:background="@drawable/button2_shape"
                android:fontFamily="@font/aclonica"
                android:text="@string/already_registered_login_here"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerButton"
                app:layout_constraintVertical_bias="0.27"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>
